gobmkida/c2/is_edge_vertex
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/is_edge_vertex/src/engine/board.c:1778:32: error: use of undeclared identifier 'byte_9B388D'
return board[pos + 19] == 3 || byte_9B388D[pos] == 3; 
                               ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/is_edge_vertex/src/obj/1/board.o] Error 1
